<resources>
    <string name="login_name">姓名</string>
    <string name="login_email">邮箱</string>
    <string name="login_phone">电话</string>
    <string name="login_password">密码</string>
    <string name="login_rep_password">重复密码</string>
    <string name="please_login">已经注册了，请登录</string>
    <string name="please_signup">还没有账户？现在注册吧！</string>
    <string name="sign_in">登录</string>
    <string name="sign_up">注册</string>
    <string name="home">首页</string>
    <string name="scan">{icon-scan}</string>
    <string name="pay">{icon-ali-pay}</string>
    <string name="seek">搜索</string>
    <string name="icon_check_all">{fa-check-circle}</string>
    <string name="wechat">{fa-weixin}</string>
    <string name="settings">设置</string>


</resources>
